feat: add missing address resource
