# src/swagger.json
@@ -305,7 +305,7 @@
                 }
             }
         },
-        "users/{userId}": {
+        "/users/{userId}": {
             "get": {
                 "summary": "Listagem de Usuário pelo ID",
                 "description": "Essa rota é responsável pelo listagem de um usuário específico através de seu ID na aplicação.",
@@ -802,7 +802,7 @@
                 }
             }
         },
-        "establishments/{establishmentId}": {
+        "/establishments/{establishmentId}": {
             "get": {
                 "summary": "Listagem de Estabelecimento pelo ID",
                 "description": "Essa rota é responsável pelo listagem de um estabelecimento específico através de seu ID na aplicação.",
@@ -970,7 +970,7 @@
             },
             "put": {
                 "summary": "Edição de Categoria de Estabelecimento",
-                "description": "Essa rota é responsável pela edição de categori estabelecimento na aplicação.",
+                "description": "Essa rota é responsável pela edição de categoria estabelecimento na aplicação.",
                 "tags": [
                     "Establishment Categories"
                 ],
@@ -1137,7 +1137,7 @@
                 }
             }
         },
-        "establishmentCategories/{establishmentCategoryId}": {
+        "/establishmentCategories/{establishmentCategoryId}": {
             "get": {
                 "summary": "Listagem de Categoria de Estabelecimento pelo ID",
                 "description": "Essa rota é responsável pelo listagem de uma categoria de estabelecimento específica através de seu ID na aplicação.",
@@ -1186,12 +1186,12 @@
                 }
             }
         },
-        "address": {
+        "/addresses": {
             "post": {
                 "summary": "Cadastro de endereço para usuários e estabelecimentos",
                 "description": "Essa rota é responsável pela criação de endereços para estabelecimento e usuários.",
                 "tags": [
-                    "Address"
+                    "Addresses"
                 ],
                 "security": [
                     {
@@ -1209,13 +1209,13 @@
                                     "value": {
                                         "city": "Cidade Exemplo",
                                         "street": "Rua da Amostra",
-                                        "number": "123",
+                                        "number": 123,
                                         "neighborhood": "Bairro da Demonstração",
                                         "complement": "Bloco A, Apartamento 101",
                                         "zip_code": "12345-678",
                                         "state": "Estado do Exemplo",
                                         "country": "País das Amostras",
-                                        "user_id": "987654321",
+                                        "user_id": "",
                                         "establishment_id": "123456789"
                                     }
                                 }
@@ -1233,7 +1233,7 @@
                                     "properties": {
                                         "data": {
                                             "type": "object",
-                                            "$ref": "#/components/schemas/EstablishmentCategoryResponse"
+                                            "$ref": "#/components/schemas/AddressResponse"
                                         }
                                     }
                                 }
@@ -1253,6 +1253,275 @@
                     },
                     "401": {
                         "description": "Não autorizado",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "$ref": "#/components/schemas/ErrorResponse"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Erro interno",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "$ref": "#/components/schemas/ErrorResponse"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "get": {
+                "summary": "Listagem de Endereços",
+                "description": "Essa rota é responsável pela listagem de endereços de estabelecimentos e usuários na aplicação.",
+                "tags": [
+                    "Addresses"
+                ],
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "$ref": "#/components/schemas/AddressesArrayResponse"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Dados não encontrados",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "$ref": "#/components/schemas/ErrorResponse"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Erro interno",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "$ref": "#/components/schemas/ErrorResponse"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "put": {
+                "summary": "Edição de Endereço",
+                "description": "Essa rota é responsável pela edição de endereço de estabelecimento e usuário na aplicação.",
+                "tags": [
+                    "Addresses"
+                ],
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/AddressUpdateInput"
+                            },
+                            "examples": {
+                                "Establishment": {
+                                    "value": {
+                                        "city": "Metropolis",
+                                        "street": "Main Street",
+                                        "number": "456",
+                                        "neighborhood": "Downtown",
+                                        "complement": "Suite 101",
+                                        "zip_code": "54321-098",
+                                        "state": "Capital State",
+                                        "country": "Example Country"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "object",
+                                            "$ref": "#/components/schemas/AddressResponse"
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Não autorizado",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "$ref": "#/components/schemas/ErrorResponse"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Dados não encontrados",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "$ref": "#/components/schemas/ErrorResponse"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Erro interno",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "$ref": "#/components/schemas/ErrorResponse"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "summary": "Deleção de Endereço",
+                "description": "Essa rota é responsável pela deleção de endereço de estabelecimento e de usuário.",
+                "tags": [
+                    "Addresses"
+                ],
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "id": {
+                                        "type": "string"
+                                    }
+                                },
+                                "required": [
+                                    "id"
+                                ]
+                            },
+                            "examples": {
+                                "Address": {
+                                    "value": {
+                                        "id": "67e60662-78e0-4260-8592-a0796da8e9dc"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "object",
+                                            "$ref": "#/components/schemas/AddressResponse"
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Não autorizado",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "$ref": "#/components/schemas/ErrorResponse"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Dados não encontrados",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "$ref": "#/components/schemas/ErrorResponse"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Erro interno",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "$ref": "#/components/schemas/ErrorResponse"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/addresses/{addressId}": {
+            "get": {
+                "summary": "Listagem de Endereço pelo ID",
+                "description": "Essa rota é responsável pelo listagem de um endereço de estabelecimento e usuário específico através de seu ID na aplicação.",
+                "tags": [
+                    "Addresses"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "object",
+                                            "$ref": "#/components/schemas/AddressResponse"  
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Dados não encontrados",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -1702,7 +1971,7 @@
                         "type": "string"
                     },
                     "number": {
-                        "type": "string"
+                        "type": "number"
                     },
                     "neighborhood": {
                         "type": "string"
@@ -1743,7 +2012,7 @@
                         "type": "string"
                     },
                     "number": {
-                        "type": "string"
+                        "type": "number"
                     },
                     "neighborhood": {
                         "type": "string"
@@ -1788,7 +2057,7 @@
                         "type": "string"
                     },
                     "number": {
-                        "type": "string"
+                        "type": "number"
                     },
                     "neighborhood": {
                         "type": "string"
@@ -1813,7 +2082,7 @@
                     "data": {
                         "type": "array",
                         "items": {
-                            "$ref": "#/components/schemas/AddressesArrayResponse"
+                            "$ref": "#/components/schemas/AddressResponse"
                         }
                     }
                 }
